--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^2.1.1",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "live-server": "^1.2.1",
     "moment": "^2.24.0",
