--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "webpack",
     "prod-build": "webpack -p --env=production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
