--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prod-build": "webpack -p --env=production",
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "heroku-postbuild": "yar run prod-build"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
