--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "yar run prod-build"
+    "heroku-postbuild": "yarn run prod-build"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
