--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Joanna Li",
   "license": "MIT",
   "scripts": {
-    "server": "live-server public",
     "build": "webpack",
     "prod-build": "webpack -p --env=production",
     "dev-server": "webpack-dev-server",
@@ -22,11 +21,8 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^2.1.1",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "^1.14.0",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "live-server": "^1.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
@@ -38,17 +34,19 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.0",
-    "react-test-renderer": "15.6.1",
     "redux": "3.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "3.1.0",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "3.1.0"
   },
   "devDependencies": {
     "enzyme-to-json": "^3.3.5",
     "jest": "20.0.4",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "react-test-renderer": "15.6.1",
+    "webpack-dev-server": "2.5.1"
   }
 }
