--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -41,12 +42,12 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "enzyme-to-json": "^3.3.5",
-    "jest": "20.0.4",
-    "webpack-cli": "^3.3.2",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
+    "jest": "20.0.4",
     "react-test-renderer": "15.6.1",
+    "webpack-cli": "^3.3.2",
     "webpack-dev-server": "2.5.1"
   }
 }
