--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "css-loader": "^2.1.1",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
+    "history": "4.7.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
