--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "heroku-postbuild": "yarn run prod-build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.3.1",
+    "@material-ui/core": "4.3.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
