--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@material-ui/core": "4.3.1",
+    "@material-ui/icons": "^2.0.0",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -42,15 +43,16 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "3.1.0",
-    "webpack": "3.1.0"
+    "webpack": "4.3.0"
   },
   "devDependencies": {
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
     "jest": "20.0.4",
+    "mini-css-extract-plugin": "0.7.0",
     "react-test-renderer": "15.6.1",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "2.5.1"
+    "webpack-dev-server": "3.4.1"
   }
 }
