--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.0",
+    "recharts": "1.6.2",
     "redux": "3.7.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -46,6 +47,7 @@
     "webpack": "4.3.0"
   },
   "devDependencies": {
+    "babel-plugin-recharts": "^1.2.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-to-json": "^3.3.5",
