chart and graph ui

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "history": "4.7.2",
+    "material-ui-datetime-range-picker": "^0.2.4",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
@@ -36,6 +37,7 @@
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.3.0",
     "react-dom": "16.8.6",
+    "react-event-timeline": "1.6.3",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.0.0",
