--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "expensify-app",
   "version": "1.0.0",
   "engines": {
-    "node": "10.15.3"
+    "node": "10.15.3",
+    "yarn": "1.5.1"
   },
   "main": "index.js",
   "author": "Joanna Li",
@@ -13,7 +14,7 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "yarn run prod-build"
+    "heroku-postbuild": "npm run prod-build"
   },
   "dependencies": {
     "@material-ui/core": "4.3.1",
