--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dev-server": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild": "npm run prod-build"
+    "heroku-postbuild": "npm run prod-build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@material-ui/core": "4.3.1",
@@ -53,6 +55,11 @@
     "webpack": "4.3.0"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "^5.2.8",
+    "@storybook/addon-docs": "^5.2.8",
+    "@storybook/addon-links": "^5.2.8",
+    "@storybook/addons": "^5.2.8",
+    "@storybook/react": "^5.2.8",
     "babel-plugin-recharts": "^1.2.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "^1.14.0",
