--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^5.0.0",
     "recharts": "1.6.2",
     "redux": "3.7.2",
+    "redux-thunk": "2.3.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "uuid": "3.1.0",
